--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "cors": "^2.8.5",
     "express": "^4.16.3",
     "jquery": "^3.3.1",
+    "mongodb": "^3.2.2",
+    "mongoose": "^5.4.19",
     "pg": "^7.9.0",
     "react": "^16.5.2",
     "react-bootstrap": "^1.0.0-beta.6",
