--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
+    "bluebird": "^3.5.4",
     "body-parser": "^1.18.3",
     "bootstrap": "^4.3.1",
     "cors": "^2.8.5",
@@ -28,7 +29,8 @@
     "react-bootstrap": "^1.0.0-beta.6",
     "react-dom": "^16.5.2",
     "react-router-dom": "^4.4.0",
-    "react-table": "^6.9.2"
+    "react-table": "^6.9.2",
+    "semantic-ui-react": "^0.86.0"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
