--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "node src/server/index.js",
     "client": "webpack-dev-server --mode development --devtool inline-source-map --hot",
     "server": "nodemon src/server/index.js",
-    "dev": "concurrently \"npm run server\" \"npm run client\""
+    "dev": "concurrently \"npm run server\" \"npm run client\"",
+    "demo": "react-scripts start"
   },
   "author": "Sandeep Raveesh",
   "license": "ISC",
@@ -19,18 +20,29 @@
     "bluebird": "^3.5.4",
     "body-parser": "^1.18.3",
     "bootstrap": "^4.3.1",
+    "concat-stream": "^2.0.0",
     "cors": "^2.8.5",
+    "dotenv": "^7.0.0",
     "express": "^4.16.3",
+    "jimp": "^0.6.1",
     "jquery": "^3.3.1",
+    "lodash": "^4.17.11",
+    "mkdirp": "^0.5.1",
     "mongodb": "^3.2.2",
     "mongoose": "^5.4.19",
+    "multer": "^1.4.1",
     "pg": "^7.9.0",
     "react": "^16.5.2",
     "react-bootstrap": "^1.0.0-beta.6",
     "react-dom": "^16.5.2",
     "react-router-dom": "^4.4.0",
+    "react-script": "^2.0.5",
     "react-table": "^6.9.2",
-    "semantic-ui-react": "^0.86.0"
+    "rxjs": "^6.4.0",
+    "semantic-ui-react": "^0.86.0",
+    "sharp": "^0.22.0",
+    "streamifier": "^0.1.1",
+    "uuid": "^3.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
@@ -55,5 +67,6 @@
     "webpack": "^4.5.0",
     "webpack-cli": "^3.0.8",
     "webpack-dev-server": "^3.1.3"
-  }
+  },
+  "proxy": "https://localhost:4000"
 }
