--- a/package.json
+++ b/package.json
@@ -26,12 +26,14 @@
     "jquery": "^3.4.0",
     "lodash": "^4.17.11",
     "mkdirp": "^0.5.1",
+    "moment": "^2.24.0",
     "mongodb": "^3.2.2",
     "mongoose": "^5.4.19",
     "multer": "^1.4.1",
     "pg": "^7.9.0",
     "react": "^16.5.2",
     "react-bootstrap": "^1.0.0-beta.6",
+    "react-day-picker": "^7.3.0",
     "react-dom": "^16.5.2",
     "react-router-dom": "^4.4.0",
     "react-script": "^2.0.5",
